--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,8 @@
-.card {
+main {
+    margin-top: 30px;
+}
+
+.card_index {
     transition: transform .2s; /* Animation */
     width: 200px;
     height: 200px;
@@ -6,7 +10,7 @@
     word-wrap: break-word;
 }
 
-.card:hover {
+.card_index:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index: 2;
 }
@@ -33,10 +37,17 @@
 
 a {
     text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #718096;
 }
 
 .content_block {
     margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .user_detail, .header-link {
@@ -47,3 +58,56 @@ a {
 .user_detail:hover, .header-link:hover {
     color: #718096;
 }
+
+.user_wish_card {
+    /*margin: 0;*/
+}
+
+/*.user_reservation {*/
+/*    margin: 0;*/
+/*}*/
+
+.user_reservations {
+    margin-left: 30px;
+    margin-right: 30px;
+    /*display: flex;*/
+    /*gap: 30px;*/
+}
+
+.list_of_reservation {
+    width: 184px;
+}
+
+.users_details_div {
+    margin-top: 20px;
+    display: flex;
+    gap: 200px;
+    justify-content: center;
+}
+
+.user_name {
+    text-align: center;
+}
+
+.reserved_wishes_accordion {
+    display: flex;
+    flex-direction: column;
+}
+
+.error_text {
+    color: red;
+}
+
+.create_wish_div {
+    text-align: right;
+}
+
+.user_header {
+    display: flex;
+    flex-direction: column;
+}
+
+.subscribe_button {
+    margin: auto;
+}
+
