--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,12 +13,19 @@ main {
 .card_index:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index: 2;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .index_wishes {
     display: flex;
     flex-wrap: wrap;
     gap: 36px 1%;
+}
+
+.inactive_link {
+    pointer-events: none;
+    cursor: default;
+    color: #718096;
 }
 
 .index_users {
@@ -105,9 +112,65 @@ a:hover {
 .user_header {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
 
 .subscribe_button {
     margin: auto;
 }
 
+.form-select-sm {
+    width: 115px;
+}
+
+.user_detail_wish_page, .wish_creator {
+    color: #C2C2C2;
+}
+
+.user_detail_wish_page:hover {
+    color:black
+}
+
+.wish_manage_buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.red_text_class {
+    color: red;
+}
+
+.green_text_class {
+    color: green;
+}
+
+.search_results {
+    display: flex;
+    width: 100%;
+}
+
+/*.wishes_results {*/
+/*    width: 80%;*/
+/*    display: flex;*/
+/*}*/
+.wishes_search_results{
+    width: 60%;
+    display: flex;
+}
+
+
+@media (prefers-color-scheme: dark) {
+    body, .navbar {
+        background-color: #434343;
+    }
+
+    .navbar {
+        background-color: #696969  !important;
+        border-radius: 0 0 17px 17px;
+    }
+
+    .card_index {
+        background-color: #718096;
+    }
+}
