--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Product Sans', sans-serif;
+}
+
 main {
     margin-top: 30px;
 }
@@ -160,6 +164,48 @@ a:hover {
     cursor: default;
     color: #718096;
 }
+
+.notifications {
+    position: relative;
+}
+
+.notification-counter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -4px;
+    left: 10px;
+    z-index: 1;
+    content: '';
+    width: 17px;
+    height: 17px;
+    border-radius: 7px;
+    background-color: #db0b0b;
+}
+
+#notification-counter-id {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.notification-text {
+    float: right;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.notification-hub {
+    width: 70%;
+}
+
 @media (prefers-color-scheme: dark) {
     body, .navbar {
         background-color: #434343;
